# rag-system

./: .env.example  .gitignore  README.md  makefile  system-init.sh
infrastructure/docker/docker-compose/: development.yml
infrastructure/docker/rag-api/: Dockerfile.dev
infrastructure/docker/rag-engine/: Dockerfile.dev
infrastructure/docker/rag-frontend/: Dockerfile.dev  nginx.conf
infrastructure/scripts/: quick-test.sh  verify-setup.sh
rag-api/: go.mod  go.sum
rag-api/cmd/server/: main.go
rag-api/configs/: local.yaml
rag-api/internal/config/: config.go
rag-api/internal/gateway/: server.go
rag-api/internal/handlers/: documents.go  handlers.go  health.go
rag-api/pkg/logger/: logger.go
rag-api/scripts/: dev-start.sh
rag-engine/: Cargo.toml
rag-engine/config/: local.toml
rag-engine/proto/: rag_service.proto
rag-engine/src/: lib.rs  main.rs
rag-engine/src/cache/: mod.rs
rag-engine/src/config/: mod.rs
rag-engine/src/embedding/: mod.rs
rag-engine/src/error/: mod.rs
rag-engine/src/llm/: mod.rs
rag-engine/src/network/: grpc.rs  http.rs  mod.rs  websocket.rs
rag-engine/src/pipeline/: document_processor.rs  mod.rs
rag-engine/src/retrieval/: mod.rs  vector_store.rs
rag-engine/src/services/: mod.rs  rag_service.rs
rag-engine/src/types/: mod.rs
rag-frontend/: package.json
rag-frontend/src/: App.tsx
rag-frontend/src/components/: DocumentUpload.tsx
rag-frontend/src/services/: api.ts
